@@ -240,10 +240,19 @@ DeviceCallContext::$supportedActions['DeviceGroup-delete'] = array(
             {
                 $string ="     * delete DeviceGroup: " . $name;
                 PH::ACTIONlog( $context, $string );
-                $pan->removeDeviceGroup($object);
 
-                #if( $context->isAPI )
-                #    $dg->API_sync();
+
+                if( $context->isAPI )
+                {
+                    $con = findConnectorOrDie($object);
+                    $xpath = DH::elementToPanXPath($object->xmlroot);
+
+                    $pan->removeDeviceGroup($object);
+                    $con->sendDeleteRequest($xpath);
+                }
+                else
+                    $pan->removeDeviceGroup($object);
+
             }
         }
     }
@@ -280,9 +289,53 @@ DeviceCallContext::$supportedActions['Template-create'] = array(
     },
     'args' => array(
         'name' => array('type' => 'string', 'default' => 'false'),
-        'parentdg' => array('type' => 'string', 'default' => 'null'),
     ),
 );
+DeviceCallContext::$supportedActions['Template-delete'] = array(
+    'name' => 'template-delete',
+    'MainFunction' => function (DeviceCallContext $context) {
+
+        $object = $context->object;
+        $name = $object->name();
+
+        $pan = $context->subSystem;
+        if( !$pan->isPanorama() )
+            derr( "only supported on Panorama config" );
+
+        if( get_class($object) == "Template" )
+        {
+            /** @var Template $object */
+            //if template is used in Template-Stack -> skip
+            /*
+            $childDG = $object->_childDeviceGroups;
+            if( count($childDG) != 0 )
+            {
+                $string = "Template with name: '" . $name . "' is used in TemplateStack. Template can not removed";
+                PH::ACTIONstatus($context, "SKIPPED", $string);
+            }
+            else
+            {
+            */
+                $string ="     * delete Template: " . $name;
+                PH::ACTIONlog( $context, $string );
+
+
+                if( $context->isAPI )
+                {
+                    $con = findConnectorOrDie($object);
+                    $xpath = DH::elementToPanXPath($object->xmlroot);
+
+                    $pan->removeTemplate($object);
+                    $con->sendDeleteRequest($xpath);
+                }
+                else
+                    $pan->removeTemplate($object);
+
+            //}
+        }
+    }
+);
+
 DeviceCallContext::$supportedActions[] = array(
     'name' => 'exportToExcel',
     'MainFunction' => function (DeviceCallContext $context) {
