@@ -6,6 +6,7 @@ UTILS:
 BUGFIX:
 * UTIL pan-os-php type=device | bugfix actions=securityprofile-create-alert-only PAN-OS version <10 compare to >=10
 * UTIL pan-os-php type=device | introduce PAN-OS API for actions=devicegroup-create / template-create
+* UTIL pan-os-php type=device | introduce actions=template-delete
 
 GENERAL:
 
